--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,10 @@
 pipeline {
     agent any
     stages{
-        stage('Pull Git') {
+        stage('cnpm') {
             steps{
-				      //拉取代码，这里也是可以使用凭据的，为了方便没贴出来
-            	git 'https://github.com/fengwangyang/vue3.git'
+               sh 'cnpm i'
+	       sh 'npm run dev'
             }
         }
    }
