--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('cnpm') {
             steps{
                sh 'cnpm i'
-	       sh 'npm run dev'
+	       sh 'npm run build'
             }
         }
    }
